cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

executable aoc2022
    main-is:          Main.hs
    other-modules:
      Util Stream
      P2 P3 P5 P7 P8 P9 P11 P12 P13
    other-extensions:
    build-depends:
      base >= 4,
      vector,
    hs-source-dirs:   app
    default-language: Haskell2010
