cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

executable aoc2022
    main-is:          Main.hs
    other-modules:
      Util Stream
      P2 P3 P5 P7 P8 P9 P11 P12 P13 P14 P15
      P16 P17 P18 P19 P20 P21 P22 P23 P24 P25
    other-extensions:
    build-depends:
      base >= 4,
      vector,
      containers,
    hs-source-dirs:   app
    default-language: Haskell2010
